--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
-  x: ^0.5.2
+  shared_preferences: ^0.5.2
+  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
